# omnimanager

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: main.py
app/backend/: bridge.py  chat_functions.py  command_router.py  discover_apps.py  search_files.py  settings.py  system.db  system_backup.db  system_db.py  user_db.py
app/backend/ai/: embeddings_engine.py  llm_engine.py  local_model.py  model_manager.py  orchestrator.py  prompt_builder.py  rag_pipeline.py  vision_manager.py
app/backend/app_db/: system.db
app/backend/databases/: system_db.py
app/backend/db/: system_db.py  user_db.py
app/backend/router/: command_router.py
app/backend/services/: chat_service.py
app/backend/system/: device_manager.py
app/state/: chat_state.py  state_manager.py
app/ui/: DevRoot.qml  dev.qml  main.qml
app/ui/components/: SidebarButton.qml
app/ui/pages/Chat/: ChatPage.qml  ChatSidebar.qml
app/ui/pages/Database/: DatabasePage.qml
app/ui/pages/Files/: FilesPage.qml
app/ui/pages/Logs/: LogsPage.qml
app/ui/pages/Notes/: NotesPage.qml
app/ui/pages/Settings/: SettingsPage.qml
archive/omnibar-experminent/core/omnibar_core/: main.py  models.py  router.py
archive/omnibar-experminent/core/omnibar_core/actions/: discover_apps.py  launch_app.py  search_files.py
archive/omnibar-experminent/frontends/plasma/: metadata.desktop
config/: models.yaml
docs/: ROADMAP.md
scrap-old-files/: .py  bridge.py  main.qml
~/.local/share/omnimanager/: system.db  system_backup.db  user.db
